- The `content.headers.custom` setting now accepts empty strings as values,
  resulting in an empty header being sent.
- Renamed settings:
  * `qt.low_end_device_mode` -> `qt.chromium.low_end_device_mode`
  * `qt.process_model` -> `qt.chromium.process_model`
- System-wide userscripts are now discovered from the correct location when
  running via Flatpak (`/app/share` rather than `/usr/share`).

Added
~~~~~

- New `input.match_counts` option which allows to turn off count matching for
  more emacs-like bindings.
- New `{relative_index}` field for `tabs.title.format` (and `.pinned_format`)
  which shows relative tab numbers.
- New `input.mode_override` option which allows overriding the current mode
  based on the new URL when navigating or switching tabs.
- New `qt.chromium.sandboxing` setting which allows to disable Chromium's
  sandboxing (mainly intended for development and testing)
- New `QUTE_TAB_INDEX` variable for userscripts, containing the index of the
  current tab.
- New `editor.remove_file` setting which can be set to `False` to keep all
  temporary editor files after closing the external editor.
- New `:rl-rubout` command replacing `:rl-unix-word-rubout` (and optionally
  `:rl-unix-filename-rubout`), taking a delimiter as argument.
- New `:rl-filename-rubout` command, using the OS path separator and ignoring
  spaces. The command also gets shown in the suggested commands for a download
  filename prompt now.

Fixed
~~~~~

- When `search.incremental` is disabled, searching using `/text` followed by a
  backwards search via `?text` (or vice-versa) now correctly changes the search
  direction.
- Elements getting a hint due to a `tabindex` now are skipped if it's set to
  `-1`, reducing some false-positives.
- The audible indicator (`[A]`) now uses a 2s cooldown when the audio goes
  silent, equivalent with the behavior of older QtWebEngine versions.
- With `confirm_quit` set to `downloads`, the confirmation dialog is now only